[gd_scene load_steps=9 format=3 uid="uid://b4mbhvq55rche"]

[ext_resource type="Script" path="res://scripts/arrow.gd" id="1_wisef"]
[ext_resource type="Texture2D" uid="uid://bbwks3hfmi1ci" path="res://assets/sprites/level_objects/spells/arrow.png" id="2_jdkm2"]
[ext_resource type="Texture2D" uid="uid://bl8gxsq5bndl7" path="res://assets/sprites/level_objects/spells/bow.png" id="3_3eycp"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_te3kg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5aop"]
size = Vector2(4, 24)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pcp2b"]
radius = 2.0
height = 6.0

[sub_resource type="Curve" id="Curve_b85ws"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.69616), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_1drd4"]
colors = PackedColorArray(0.964706, 0.909804, 0.878431, 1, 1, 1, 1, 0)

[node name="arrow" type="StaticBody2D"]
z_index = 10
collision_layer = 16
collision_mask = 8
script = ExtResource("1_wisef")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_te3kg")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(14, 0)
collision_mask = 16
hit_from_inside = true
collide_with_areas = true

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2.18557e-08)
rotation = 1.5708
shape = SubResource("RectangleShape2D_d5aop")

[node name="ArrowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_jdkm2")

[node name="BowSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_3eycp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(13, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pcp2b")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="TrailParticle" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(-12, 0)
amount = 12
lifetime = 0.6
explosiveness = 0.1
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2(0, 0)
orbit_velocity_min = -0.2
orbit_velocity_max = 0.2
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 1.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_b85ws")
color_ramp = SubResource("Gradient_1drd4")

[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
